# drf

./: README.md  pyproject.toml
api2/: serializers.py  urls.py  views.py
blog/migrations/: 0002_alter_post_options.py
mysite/: settings.py  urls.py
templates/include/: post_detail_vue.html  post_list_vue.html
